Oppdater build.gradle.kts (#90)
* Update Testcontainers

* Oppdater build.gradle.kts